finishing up the structure

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,5 +1,4 @@
 #header nav {
-  grid-area: 1/2/1/2;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -8,8 +7,10 @@
 }
 
 #header nav li {
+  padding: 0.5em;
+  border: 1px solid #fff;
   list-style: none;
-  transition: all 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 #header nav li::before {
@@ -23,6 +24,7 @@
 #header nav li a,
 #header nav li a:link {
   text-decoration: none;
+  color: #fff;
 }
 
 #header nav li a::before,
@@ -35,6 +37,11 @@
 #header nav li.blog a::before,
 #header nav li.blog a:link::before {
   content: '\f0c9';
+}
+
+#header nav li.home a::before,
+#header nav li.home a:link::before {
+  content: '\f015';
 }
 
 #header nav li:hover {
