--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -1,5 +1,9 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap';
-@import './navigation.css';
+@import url('https://fonts.googleapis.com/css?family=Monoton&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Arima+Madurai&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Sanchez:400italic, 400');
+@import url('./navigation.css');
+@import url('./quotes.css');
 
 html,
 body {
@@ -8,60 +12,98 @@ body {
   font-size: 16px;
   font-family: Roboto, sans-serif;
 
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 body {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(1fr, auto));
-  grid-template-rows: 10vh 65vh 20vh 5vh;
-  grid-template-areas:
-    'header header header header'
-    'main main main main'
-    'featured featured featured featured'
-    'footer footer footer footer';
+  background-color: #eee;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #404041;
+  margin: 0;
+}
+
+h1 {
+  font-family: Monoton, sans-serif;
+  font-size: 2em;
+}
+
+b {
+}
+
+em {
+}
+
+img {
+  min-width: 100%;
+  height: auto;
+}
+
+a,
+a:link {
+  text-decoration: none;
+  color: #404041;
 }
 
 #header {
-  grid-area: header;
-  display: grid;
-  grid-template-columns: 2fr 2fr;
-  grid-template-rows: 10vh;
-  background-color: red;
-}
-
-#header img {
-  grid-area: 1/1/1/1;
-  height: 10vh;
-  width: auto;
+  background-color: #404041;
 }
 
 #featured {
-  grid-area: featured;
-  background-image: url('https://via.placeholder.com/200');
-  background-size: contain;
+  border-bottom: 1px solid #404041;
+}
+
+#introduction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  padding: 1em;
+}
+
+#intro-pic {
+  min-width: 100px;
+  height: auto;
+  width: 100px;
+}
+
+#intro-text {
+  display: inherit;
+  flex-direction: column;
+  align-items: center;
 }
 
 #content {
-  grid-area: main;
-  background-color: blueviolet;
+  padding: 0 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#content > h1 {
+  margin: 0.5em 0;
+}
+
+#blogpost-list {
+  display: flex;
+  flex-direction: column;
 }
 
 #footer {
-  grid-area: footer;
-  padding: 0 1em;
-  background-color: rebeccapurple;
+  color: #d2d1b5;
+  padding: 0.5em 1em;
+  background-color: #404041;
+  margin: 1em 0 0 0;
 }
 
-/** styles for screens bigger than 900px */
-@media screen and (min-width: 900px) {
-  body {
-    grid-column-gap: 1em;
-    grid-template-rows: 10vh 30vh 55vh 5vh;
-    grid-template-areas:
-      'header header header header'
-      'featured featured featured featured'
-      'main main main main'
-      'footer footer footer footer';
-  }
+#footer a,
+#footer a:link {
+  color: #d2d1b5;
+  text-decoration: none;
 }
